# neural-diffusion-processes

./: .gitignore  README.md  config.py  pyproject.toml
experiments/gp_regression/: config.toml  data.py  eval.py  main.py  readme.md  test.py
experiments/gp_regression/.aim/: ENCRYPTION_KEY  run_metadata.sqlite
experiments/gp_regression/.aim/meta/chunks/c9cbd4f5825a435aad0bdcff/: 000534.sst  000536.sst  000538.sst  000540.sst  000542.sst  IDENTITY  LOG  LOG.old.1722499331219476  LOG.old.1722499337576170  LOG.old.1722499339830910  LOG.old.1722501573955574  LOG.old.1722501580309767  LOG.old.1722501586567799  LOG.old.1722502626948001  LOG.old.1722502629272125  LOG.old.1722502635538477  MANIFEST-000004
experiments/gp_regression/.aim/meta/chunks/f95e6483e283459a9abe17e8/: 000313.sst  000315.sst  000317.sst  000319.sst  000321.sst  000323.sst  000325.sst  000327.sst  000329.sst  IDENTITY  LOG  LOG.old.1722576904157169  LOG.old.1722576910518599  LOG.old.1722581410795827  LOG.old.1722582362578735  LOG.old.1722582368930830  LOG.old.1722582375193813  LOG.old.1722582377435957  LOG.old.1722583379628786  LOG.old.1722583618842390  MANIFEST-000004
experiments/gp_regression/.aim/meta/index/: 002088.sst  002097.sst  002106.sst  IDENTITY  LOG  LOG.old.1722582377403419  LOG.old.1722583379595512  LOG.old.1722583618804661  LOG.old.1722583679124172  LOG.old.1722608488700712  LOG.old.1722608494161574  LOG.old.1722608502512669  LOG.old.1722608508659529  LOG.old.1722608514027132  MANIFEST-002101
experiments/gp_regression/.aim/seqs/chunks/c9cbd4f5825a435aad0bdcff/: 000814.sst  000816.sst  000818.sst  000820.sst  000822.sst  000824.sst  000826.sst  000828.sst  000830.sst  IDENTITY  LOG  MANIFEST-000004
experiments/gp_regression/.aim/seqs/chunks/f95e6483e283459a9abe17e8/: 000485.sst  000487.sst  000489.sst  000491.sst  000493.sst  IDENTITY  LOG  LOG.old.1722556648691760  LOG.old.1722556669859920  LOG.old.1722556670439311  LOG.old.1722556677586073  LOG.old.1722556678170913  LOG.old.1722557961043349  LOG.old.1722557961690915  LOG.old.1722558039925721  LOG.old.1722558040536929  MANIFEST-000004
experiments/mogp_regression/: config.toml  data.py  main.py
experiments/regression/: config.toml  config_new.py  main.py
experiments/wind_data/: config.toml  config_multi.toml  eval.py  readme.md  train.py  train_multi.py
experiments/wind_data/.aim/: .project_settings  ENCRYPTION_KEY  aim_db  run_metadata.sqlite
experiments/wind_data/.aim/meta/chunks/086927b389014c2781c132d7/: 000041.sst  000043.sst  000045.sst  IDENTITY  LOG  LOG.old.1722643592086083  LOG.old.1722643602160976  LOG.old.1722643612186508  LOG.old.1722643622276878  LOG.old.1722643632327985  LOG.old.1722643642386600  LOG.old.1722643652599966  LOG.old.1722643662517806  LOG.old.1722643672570027  MANIFEST-000004
experiments/wind_data/.aim/meta/chunks/1fff7f93bc7b4862bdd868dc/: 000075.sst  000077.sst  IDENTITY  LOG  LOG.old.1722817710579981  LOG.old.1722817840502386  LOG.old.1722817843592379  LOG.old.1722817845335563  LOG.old.1722817846706370  LOG.old.1722817849985673  LOG.old.1722817851135652  LOG.old.1722817894056010  LOG.old.1722817900403264  MANIFEST-000004
experiments/wind_data/.aim/meta/chunks/20937cb06a5b4b3ca1833961/: 000057.sst  000059.sst  IDENTITY  LOG  LOG.old.1722258103770272  LOG.old.1722261078088473  MANIFEST-000043
experiments/wind_data/.aim/meta/chunks/2f181ab075fa4109a5bbe3f4/: 000057.sst  000059.sst  000061.sst  IDENTITY  LOG  LOG.old.1722263142553261  LOG.old.1722265380239549  LOG.old.1722265380340066  MANIFEST-000043
experiments/wind_data/.aim/meta/chunks/362bcc49473444878490ef52/: 000048.sst  000050.sst  000052.sst  000054.sst  000056.sst  000058.sst  000060.sst  000062.sst  IDENTITY  LOG  LOG.old.1722268128016662  MANIFEST-000036
experiments/wind_data/.aim/meta/chunks/bf1ab5c00490426183db0b77/: 000065.sst  000067.sst  000069.sst  000071.sst  000073.sst  000075.sst  IDENTITY  LOG  LOG.old.1722272217762016  MANIFEST-000053
experiments/wind_data/.aim/meta/index/: 000947.sst  000949.sst  000951.sst  000953.sst  000962.sst  000964.sst  000966.sst  000968.sst  IDENTITY  LOG  LOG.old.1722641140864057  LOG.old.1722641382830950  LOG.old.1722644192242567  LOG.old.1722726899110518  LOG.old.1722727241038471  LOG.old.1722727652950555  LOG.old.1722727686514841  LOG.old.1722731954766023  LOG.old.1722820675963759  MANIFEST-000957
experiments/wind_data/trained_models/wind_Aug04_xfjd_testrun/: config.yaml
experiments/wind_data/trained_models/wind_Aug05_heih_testrun/: config.yaml
neural_diffusion_processes/: model.py  multichannel.py  process.py  types.py
util/: _config_defaults.py  config_tools.py  data.py  load_model.py
(+134 files in other folders)
