[tool.poetry]
name = "neural-diffusion-processes"
version = "0.1.0"
description = "Neural Diffusion Processes: diffusion models for processes."
authors = [
    "Vincent Dutordoir <dutordoirv@gmail.com>",
    "Alan Saul",
    "Zoubin Ghahramani",
    "Fergus Simpson"
]
license = "Apache-2.0"
packages = [
    { include = 'neural_diffusion_processes' },
    { include = 'util' }
]

[tool.poetry.dependencies]
python = "^3.9,<3.11"
jax-metal = [ { version = '0.1.0', markers = "sys_platform == 'darwin' and platform_machine == 'arm64'", source = "pypi" } ]
jax = [
    # { version = "0.4.13", markers = "sys_platform != 'darwin'", source = "pypi" },
    { version = "0.4.26", markers = "sys_platform == 'darwin' and platform_machine == 'arm64'", source = "pypi" }
]
jaxlib = [
    # { version = "0.4.13", markers = "sys_platform != 'darwin'", source = "pypi" },
    { version = "0.4.26", markers = "sys_platform == 'darwin' and platform_machine == 'arm64'", source = "pypi" }
]
einops = "^0.6.0"
check-shapes = "^1.0.0"
dm-haiku = "^0.0.9"
typing-extensions = "^4.7.1"
simple-pytree = "<0.2.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.247"
pytest = "^7.2.1"
black = "^23.1.0"
isort = "^5.12.0"
taskipy = "^1.10.3"

[tool.poetry.group.experiments]
optional = true

[tool.poetry.group.experiments.dependencies]
tensorboardx = "^2.6.1"
# ml-tools = {git = "https://github.com/vdutor/ml-tools.git", rev = "fb893b380367f2eb1fc54c6bbd019cf482a61077"}
# ^ this is for using with gpjax 0.5.9
ml-tools = {git = "https://github.com/vdutor/ml-tools.git", rev = "main"}
# tensorflow = "2.14.0"  earliest arm64 version
# tensorflow-cpu = "2.12.0" currently no arm64 sdist/wheel
# tensorflow-datasets = "^4.9.2"
datasets = "^2.13.1"
aim = "^3.17.5"
distrax = "0.1.4"
tomli = ">=2.0.0"
absl-py = "2.1.0"
scipy = "1.12.0"
# gpjax = "0.5.9"

[tool.taskipy.tasks]
format = """
    isort neural_diffusion_processes tests
    black neural_diffusion_processes tests
"""
lint = """
    echo ============Ruff=============
    ruff check neural_diffusion_processes tests
    echo ============Isort=============
	isort neural_diffusion_processes tests --check-only --df
    echo ============Black=============
	black neural_diffusion_processes tests --check --diff
"""
test = "pytest tests"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
ignore = ["F722"]

[tool.ruff.per-file-ignores]
'neural_diffusion_processes/__init__.py' = ['F401']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"